--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
       href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81899938-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-81899938-1');
+    </script>
   </head>
   <body>
     <noscript>
